@@ -1,6 +1,7 @@
 python3.10 (3.10.8-2) UNRELEASED; urgency=medium
 
   * Fix GDB auto-load files. Closes: #1017913.
+  * Add support for systemd-binfmt. Closes: #1012377.
 
  -- Matthias Klose <doko@debian.org>  Thu, 03 Nov 2022 12:21:44 +0100
 
